--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
 			href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Lato&family=Open+Sans:wght@300;400&family=Poppins:wght@200;400;600;800&family=Roboto:wght@100;300&family=The+Nautigal&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+		/>
 		<title>App - Shopping Cart</title>
 	</head>
 	<body>
